# variegated-firmware-updater

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
